<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.radiobuttonexample.MainActivity"
    >

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        />

    <TextView
        android:id="@+id/txvClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txvClient"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        />

    <RadioGroup
        android:id="@+id/rgbClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txvClient"
        app:layout_constraintStart_toStartOf="@+id/txvClient"
        >

        <RadioButton
            android:id="@+id/rbtProfessional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtProfessional"
            android:onClick="onRadioButtonClicked"
            />

        <RadioButton
            android:id="@+id/rbtBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtBusiness"
            android:onClick="onRadioButtonClicked"
            />

    </RadioGroup>

    <include
        layout="@layout/layout_view_professional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgbClient"
        />

    <include
        layout="@layout/layout_view_business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgbClient"
        />


</android.support.constraint.ConstraintLayout>
